crates/test-ui/ui/downcast_generic.stderr
error[E0277]: the trait bound `NSArray<NSObject>: objc2::downcast::DowncastTarget` is not satisfied
 --> ui/downcast_generic.rs
  |
  |     let _ = arr.downcast::<NSArray<NSObject>>();
  |                 --------   ^^^^^^^^^^^^^^^^^ the trait `objc2::downcast::DowncastTarget` is not implemented for `NSArray<NSObject>`
  |                 |
  |                 required by a bound introduced by this call
  |
help: the trait `objc2::downcast::DowncastTarget` is implemented for `NSArray`
 --> $WORKSPACE/crates/objc2/src/__macros/extern_class/mod.rs
  |
  |           unsafe impl $crate::DowncastTarget for $class $(<$($crate::__extern_class_map_anyobject!($generic)),+>)? {}
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
 ::: $WORKSPACE/framework-crates/objc2-foundation/src/generated/NSArray.rs
  |
  | / extern_class!(
  | |     /// **************    Immutable Array        ***************
  | |     ///
  | |     /// See also [Apple's documentation](https://developer.apple.com/documentation/foundation/nsarray?language=objc)
... |
  | |     pub struct NSArray<ObjectType: ?Sized = AnyObject>;
  | | );
  | |_- in this macro invocation
note: required by a bound in `objc2::rc::retained::Retained::<T>::downcast`
 --> $WORKSPACE/crates/objc2/src/rc/retained.rs
  |
  |     pub fn downcast<U: DowncastTarget>(self) -> Result<Retained<U>, Retained<T>>
  |                        ^^^^^^^^^^^^^^ required by this bound in `Retained::<T>::downcast`
  = note: this error originates in the macro `$crate::__extern_class_inner` which comes from the expansion of the macro `extern_class` (in Nightly builds, run with -Z macro-backtrace for more info)
